--- a/Lab2-19/Lab2-19.csproj
+++ b/Lab2-19/Lab2-19.csproj
@@ -57,7 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="Model\Ariph.cs" />
     <Compile Include="RelayCommand.cs" />
-    <Compile Include="ViiwModel\MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
